# cpp11_embed

./: .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  LICENSE  README.md
.github/workflows/: on_push_or_pr.yml
cmake_integration/: Cpp11Embed.cmake  Cpp11EmbedGeneric.cmake
src/: Lib.cpp  Lib.h  Main.cpp
tests/: CMakeLists.txt  LibTests.cpp
tests/end_to_end_tests/: CMakeLists.txt  Pipfile
tests/end_to_end_tests/tests/: conftest.py  cpp11_embed_path.py  test_cpp11_embed.py  test_cpp11_embed_binary_data.py  test_cpp11_embed_help.py  test_cpp11_embed_text_data.py  test_cpp1_embed.py  utilities.py
tests/end_to_end_tests/tests/test_files/: tabs.txt
tests/self_tests/: CMakeLists.txt  SelfTests.cpp
tests/unit_tests/: CMakeLists.txt  LibTests.cpp
